<resources>

    <string name="app_name">Inventory App</string>
    <string name="main_inventory">Inventory</string>
    <string name="main_button_add_product">Add Product</string>
    <string name="product_name_title">Product Name : </string>
    <string name="price_title">Price : </string>
    <string name="quantity_title">Quantity : </string>
    <string name="image_title">Image : </string>
    <string name="upload_title">Upload Image</string>
    <string name="save_title">Save</string>
    <string name="addItem">Add Product</string>
    <string name="preview_inventory">Preview Inventory</string>
    <string name="available">In Stock : </string>
    <string name="operations">Operations : </string>
    <string name="add_a_new_item">Add a New Item</string>
    <string name="order">Make an order</string>
    <string name="update">update</string>
    <string name="delete">Delete</string>
    <string name="sale">Sale</string>
    <string name="inventory">INVENTORY</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="price_of_the_product">Price of the Product</string>
    <string name="avaialable_quantities_of_the_product">Available Quantities of the Product</string>

    <!-- Validation Messages -->
    <string name="name_required">name is required</string>
    <string name="price_required">Price is required</string>
    <string name="quantity_required">Quantity is required</string>
    <string name="upload_image"> Upload an image</string>

    <string name="product_added">Product Added Successfully</string>
    <string name="empty"> Inventory is empty \n
        Start adding some items to your inventory</string>
    <string name="out_of_stock">Not available stock of</string>
    <string name="delete_message"> Are you sure you want to delete this product?</string>
    <string name="update_message">Product quantity updated Successfully</string>
</resources>
